2007-11-11  Ingmar Schlecht  <ingmar@typo3.org>

	* Minor code-cleanup to recent Workspace related changes

2007-11-10  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* (cleanup) Protect rtehtmlarea 'for' loops from properties possibly added by JS frameworks.
	* Feature #6579 continued: correction to plugin registration for FE case

2007-11-10  Ingmar Schlecht  <ingmar@typo3.org>

	* Feature #6256: $TCA: Newline for Tabs (--div--) (Thanks to Malte Jansen)
	* Minor Feature #4280: stdWrap for params property of IMAGE (Thanks to Ralf Hettinger)
	* Bug #6682: GMENU property disableAltText clears the content of alt param, but does not remove it (Thanks to Hemlut Hummel)

2007-11-09  Benjamin Mack  <mack@xnos.org>

	* (feature/cleanup) Refactored clickmenu to speed up the BE
	* (bugfix) Fixed Image Generation bug. Call in t3lib_div now uses the IM wrapper to render gifs/pngs

2007-11-08  Ingo Renner	<ingo@typo3.org>

	* added initial cleaner backend project work (backend.php)

2007-11-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature #6668 continued: Some minor adjustments when htmlArea RTE uses the Ajax request

2007-11-08  Benjamin Mack  <mack@xnos.org>

	* (cleanup) Fixed #6670: Added tabs to Page properties + cleanup (Thanks to Steffen Kamper)

2007-11-08  Oliver Hader  <oh@inpublica.de>

	* Updated JavaScript frameworks in typo3/contrib: prototype (1.6.0) and script.aculo.us (1.8.0)

2007-11-07  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature #6668: Let htmlArea RTE use the Ajax request of the Prototype framework

2007-11-07  Benjamin Mack  <mack@xnos.org>

	* (minor) sysext "opendocs" is now installed by default

2007-11-07  Oliver Hader  <oh@inpublica.de>

	* (major) Fixed bug #5772: IRRE - Combination mode doesn't save new child records correctly
	* (minor) Fixed bug #6456: IRRE - Palettes are not rendered correctly on nesting records using the same table
